<resources>
    <string name="app_name">Github Api Frontier</string>
    <string name="title">Judul</string>
    <string name="description">Description</string>
    <string name="review">Review</string>
    <string name="write_your_review_here">Write your review here..</string>
    <string name="send">Kirim</string>
    <string name="username">Username</string>
    <string name="search_result">Search Result for (placeholder):</string>
    <string name="search_user">Search User</string>
    <string name="tab_lay1">Followers</string>
    <string name="tab_lay2">Following</string>
    <string name="apptitle">Github API Frontier</string>
    <string name="appdesc">APP to make your github stalking activity\n100% easier.</string>
    <string name="appuse">To use the app press the search button above and search your prey. There is also bookmark feature.</string>
    <string name="bookmarked">Bookmarked</string>
</resources>